Make shorthand return empty string if its longhand was specified wrongly.

Per https://www.w3.org/TR/cssom-1/#serializing-css-values.

For page-break-{before,after,inside}
and -webkit-column-break-{before,after,inside},
if longhands for those properties are specified
in a way that isn't representable by the shorthand,
then make that shorthand property's computed style
return the empty string.

Bug: 906336
Change-Id: Icc2c07e8cc245ed93a6ae87b742fb244cf9e6c71
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1596144
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Joonghun Park <pjh0718@gmail.com>
Cr-Commit-Position: refs/heads/master@{#656743}